package com.koreanair.reservation.domain.payment;

public enum PaymentMethod {
    CREDIT_CARD,
    DEBIT_CARD,
    BANK_TRANSFER,
    SIMPLE_PAY,
    MILEAGE
}
